@@ -54,6 +54,7 @@ Changelog for 1.3.14
 * Fixed unknown db detected as SQL-Ledger (Chris T, bug 3510039)
 * Fixed pos ignores pd_proto and always connects tcp (Chris T, bug 3458112)
 * Error now displayed when currencies are not defined (Chris T, bug 3509555)
+* Fixed "no obvious way to select credit account" (Chris T, bug 3510564)
 
 Andres B is Andres Basile
 
